Adding updates from PAF calculations and V&V

--- a/outpatient_visits.ipynb
+++ b/outpatient_visits.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "72bd710b-a302-4ac6-82a7-fb75e871e567",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,233 @@
     "from get_draws.api import get_draws\n",
     "import numpy as np\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c0651cf2-4a1b-4dbb-bc22-ec706811a5ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age_group_id</th>\n",
+       "      <th>draw_0</th>\n",
+       "      <th>draw_1</th>\n",
+       "      <th>draw_10</th>\n",
+       "      <th>draw_100</th>\n",
+       "      <th>draw_101</th>\n",
+       "      <th>draw_102</th>\n",
+       "      <th>draw_103</th>\n",
+       "      <th>draw_104</th>\n",
+       "      <th>draw_105</th>\n",
+       "      <th>...</th>\n",
+       "      <th>draw_997</th>\n",
+       "      <th>draw_998</th>\n",
+       "      <th>draw_999</th>\n",
+       "      <th>location_id</th>\n",
+       "      <th>measure_id</th>\n",
+       "      <th>metric_id</th>\n",
+       "      <th>modelable_entity_id</th>\n",
+       "      <th>sex_id</th>\n",
+       "      <th>year_id</th>\n",
+       "      <th>model_version_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10.389291</td>\n",
+       "      <td>28.163219</td>\n",
+       "      <td>9.389077</td>\n",
+       "      <td>9.543693</td>\n",
+       "      <td>5.593915</td>\n",
+       "      <td>9.595318</td>\n",
+       "      <td>9.567489</td>\n",
+       "      <td>9.637315</td>\n",
+       "      <td>8.995256</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.332178</td>\n",
+       "      <td>9.078360</td>\n",
+       "      <td>9.709188</td>\n",
+       "      <td>523</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18706</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>456968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11</td>\n",
+       "      <td>10.785260</td>\n",
+       "      <td>10.312513</td>\n",
+       "      <td>10.168950</td>\n",
+       "      <td>9.839899</td>\n",
+       "      <td>5.691297</td>\n",
+       "      <td>9.934976</td>\n",
+       "      <td>9.843042</td>\n",
+       "      <td>9.752695</td>\n",
+       "      <td>9.424166</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.929432</td>\n",
+       "      <td>5.786236</td>\n",
+       "      <td>9.875660</td>\n",
+       "      <td>523</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18706</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>456968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12</td>\n",
+       "      <td>10.184081</td>\n",
+       "      <td>10.500658</td>\n",
+       "      <td>10.174549</td>\n",
+       "      <td>6.111129</td>\n",
+       "      <td>5.894871</td>\n",
+       "      <td>9.981028</td>\n",
+       "      <td>9.907108</td>\n",
+       "      <td>9.971907</td>\n",
+       "      <td>9.589588</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.469922</td>\n",
+       "      <td>9.492557</td>\n",
+       "      <td>10.278603</td>\n",
+       "      <td>523</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18706</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>456968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13</td>\n",
+       "      <td>10.155598</td>\n",
+       "      <td>10.464742</td>\n",
+       "      <td>10.370496</td>\n",
+       "      <td>9.839383</td>\n",
+       "      <td>5.789768</td>\n",
+       "      <td>10.994327</td>\n",
+       "      <td>10.559358</td>\n",
+       "      <td>10.077005</td>\n",
+       "      <td>6.002843</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.866646</td>\n",
+       "      <td>9.424783</td>\n",
+       "      <td>10.086184</td>\n",
+       "      <td>523</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18706</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>456968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>14</td>\n",
+       "      <td>10.628806</td>\n",
+       "      <td>10.924765</td>\n",
+       "      <td>10.679437</td>\n",
+       "      <td>6.216699</td>\n",
+       "      <td>5.945142</td>\n",
+       "      <td>10.061196</td>\n",
+       "      <td>9.916136</td>\n",
+       "      <td>9.912958</td>\n",
+       "      <td>6.106936</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.851227</td>\n",
+       "      <td>9.479830</td>\n",
+       "      <td>10.333193</td>\n",
+       "      <td>523</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18706</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>456968</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 1008 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age_group_id     draw_0     draw_1    draw_10  draw_100  draw_101  \\\n",
+       "0            10  10.389291  28.163219   9.389077  9.543693  5.593915   \n",
+       "1            11  10.785260  10.312513  10.168950  9.839899  5.691297   \n",
+       "2            12  10.184081  10.500658  10.174549  6.111129  5.894871   \n",
+       "3            13  10.155598  10.464742  10.370496  9.839383  5.789768   \n",
+       "4            14  10.628806  10.924765  10.679437  6.216699  5.945142   \n",
+       "\n",
+       "    draw_102   draw_103   draw_104  draw_105  ...  draw_997  draw_998  \\\n",
+       "0   9.595318   9.567489   9.637315  8.995256  ...  9.332178  9.078360   \n",
+       "1   9.934976   9.843042   9.752695  9.424166  ...  5.929432  5.786236   \n",
+       "2   9.981028   9.907108   9.971907  9.589588  ...  9.469922  9.492557   \n",
+       "3  10.994327  10.559358  10.077005  6.002843  ...  9.866646  9.424783   \n",
+       "4  10.061196   9.916136   9.912958  6.106936  ...  9.851227  9.479830   \n",
+       "\n",
+       "    draw_999  location_id  measure_id  metric_id  modelable_entity_id  sex_id  \\\n",
+       "0   9.709188          523          19          3                18706       2   \n",
+       "1   9.875660          523          19          3                18706       2   \n",
+       "2  10.278603          523          19          3                18706       2   \n",
+       "3  10.086184          523          19          3                18706       2   \n",
+       "4  10.333193          523          19          3                18706       2   \n",
+       "\n",
+       "   year_id  model_version_id  \n",
+       "0     2019            456968  \n",
+       "1     2019            456968  \n",
+       "2     2019            456968  \n",
+       "3     2019            456968  \n",
+       "4     2019            456968  \n",
+       "\n",
+       "[5 rows x 1008 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = get_draws('modelable_entity_id',\n",
+    "                18706,\n",
+    "                source='epi',\n",
+    "                location_id=523,\n",
+    "                age_group_id=[10,11,12,13,14,15,16,17,18,19,20,30,31,32],\n",
+    "                sex_id=[1,2],\n",
+    "                year_id=2019,\n",
+    "                gbd_round_id=6, \n",
+    "                status= 'best', \n",
+    "                decomp_step= 'step4')\n",
+    "df.head()"
    ]
   },
   {
