Updates, primarily to PAF work

--- a/Model9_VV.ipynb
+++ b/Model9_VV.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cd3d6483-2cb2-49a5-a8a1-19b34851e8e5",
    "metadata": {
     "tags": []
@@ -200,6 +200,27 @@
    "source": [
     "deaths = pd.read_csv(sim_results_dir + 'deaths.csv')\n",
     "deaths.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "56fd741c-a5c5-4ed1-8d10-f2107a5fa83b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 29, 232, 357, 394, 602, 629, 650, 680, 829, 946])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deaths.input_draw.unique()"
    ]
   },
   {
