--- a/PAF_BMI_to_HF.ipynb
+++ b/PAF_BMI_to_HF.ipynb
@@ -959,7 +959,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "986bad29-c00b-46b5-ba17-7efaf185e692",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
