--- a/Cause_VV_multi_location_06.28.23.ipynb
+++ b/Cause_VV_multi_location_06.28.23.ipynb
@@ -45,21 +45,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "deaths.csv                       sbp_medication_person_time.csv\r\n",
-      "deaths.hdf                       sbp_medication_person_time.hdf\r\n",
-      "healthcare_visits.csv            state_person_time.csv\r\n",
-      "healthcare_visits.hdf            state_person_time.hdf\r\n",
-      "intervention_person_time.csv     transition_count.csv\r\n",
-      "intervention_person_time.hdf     transition_count.hdf\r\n",
-      "ldlc_medication_person_time.csv  ylds.csv\r\n",
-      "ldlc_medication_person_time.hdf  ylds.hdf\r\n",
-      "risk_exposure_time.csv           ylls.csv\r\n",
-      "risk_exposure_time.hdf           ylls.hdf\r\n"
+      "deaths.csv                       risk_exposure_time.hdf\r\n",
+      "deaths.hdf                       sbp_medication_person_time.csv\r\n",
+      "healthcare_visits.csv            sbp_medication_person_time.hdf\r\n",
+      "healthcare_visits.hdf            state_person_time.csv\r\n",
+      "intervention_person_time.csv     state_person_time.hdf\r\n",
+      "intervention_person_time.hdf     transition_count.csv\r\n",
+      "ldlc_medication_person_time.csv  transition_count.hdf\r\n",
+      "ldlc_medication_person_time.hdf  ylds.csv\r\n",
+      "polypill_person_time.csv         ylds.hdf\r\n",
+      "polypill_person_time.hdf         ylls.csv\r\n",
+      "risk_exposure_time.csv           ylls.hdf\r\n"
      ]
     }
    ],
    "source": [
-    "ls /mnt/team/simulation_science/costeffectiveness/results/vivarium_nih_us_cvd/51-locations/alabama/2023_06_02_18_00_54/count_data"
+    "ls /mnt/team/simulation_science/priv/engineering/vivarium_nih_us_cvd/timing_runs/alabama/2023_07_13_15_16_03/count_data"
    ]
   },
   {
