--- a/Risks_VV_07.11.2023.ipynb
+++ b/Risks_VV_07.11.2023.ipynb
@@ -1205,6 +1205,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3cebc1f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meds = pd.read_csv(sim_results_dir + '/sbp_medication_person_time.csv')\n",
+    "meds.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "799b206a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meds_adherent = meds.loc[meds['medication_adherence']=='adherent'].reset_index()\n",
+    "meds_adherent_rate = meds_adherent.merge(per_time_group[['ptvalue','sex','age','year','input_draw','scenario']], on=['sex','age','year','input_draw','scenario'])\n",
+    "meds_adherent_rate['meds_adherent_rate'] = meds_adherent_rate['value'] / meds_adherent_rate['ptvalue']\n",
+    "meds_adherent_rate_summ = (meds_adherent_rate\n",
+    "                .groupby(['sex', 'year', 'sbp_medication','scenario'])\n",
+    "                .meds_adherent_rate.describe(percentiles=[.025, .975])\n",
+    "                .filter(['mean', '2.5%', '97.5%'])\n",
+    "                .reset_index())\n",
+    "meds_adherent_rate_summ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "347e3f36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%%capture\n",
+    "for sex in meds_adherent_rate_summ.sex.unique():\n",
+    "    plt.figure() \n",
+    "    no_trt = meds_adherent_rate_summ.loc[(meds_adherent_rate_summ.sex==sex) & (meds_adherent_rate_summ.sbp_medication=='no_treatment')]\n",
+    "    plt.plot(no_trt['year'], no_trt['mean'], marker='o')\n",
+    "    one_half = meds_adherent_rate_summ.loc[(meds_adherent_rate_summ.sex==sex) & (meds_adherent_rate_summ.sbp_medication=='one_drug_half_dose_efficacy')]\n",
+    "    plt.plot(one_half['year'], one_half['mean'], marker='o')\n",
+    "    one_std = meds_adherent_rate_summ.loc[(meds_adherent_rate_summ.sex==sex) & (meds_adherent_rate_summ.sbp_medication=='one_drug_std_dose_efficacy')]\n",
+    "    plt.plot(one_std['year'], one_std['mean'], marker='o')\n",
+    "    two_half = meds_adherent_rate_summ.loc[(meds_adherent_rate_summ.sex==sex) & (meds_adherent_rate_summ.sbp_medication=='two_drug_half_dose_efficacy')]\n",
+    "    plt.plot(two_half['year'], two_half['mean'], marker='o')\n",
+    "    two_std = meds_adherent_rate_summ.loc[(meds_adherent_rate_summ.sex==sex) & (meds_adherent_rate_summ.sbp_medication=='two_drug_std_dose_efficacy')]\n",
+    "    plt.plot(two_std['year'], two_std['mean'], marker='o')\n",
+    "    three_half = meds_adherent_rate_summ.loc[(meds_adherent_rate_summ.sex==sex) & (meds_adherent_rate_summ.sbp_medication=='three_drug_half_dose_efficacy')]\n",
+    "    plt.plot(three_half['year'], three_half['mean'], marker='o')\n",
+    "    three_std = meds_adherent_rate_summ.loc[(meds_adherent_rate_summ.sex==sex) & (meds_adherent_rate_summ.sbp_medication=='three_drug_std_dose_efficacy')]\n",
+    "    plt.plot(three_std['year'], three_std['mean'], marker='o')\n",
+    "    plt.title(f'Medications: {sex} in {scenario}') \n",
+    "    plt.xticks(rotation=90)\n",
+    "    plt.legend(['No Treatment', 'One Drug at Half Dose','One Drug at Std Dose','Two Drug at Half Dose','Two Drug at Std Dose','Three Drug at Half Dose','Three Drug at Std Dose'],loc='center left', bbox_to_anchor=(1, 0.5))\n",
+    "    plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98c6e1ad",
+   "metadata": {},
+   "source": [
+    "### LDL-C Meds"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "id": "a48dbf78",
    "metadata": {},
