--- a/Malaria_IDs.ipynb
+++ b/Malaria_IDs.ipynb
@@ -2341,11 +2341,389 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "feb56694",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rei_id</th>\n",
+       "      <th>modelable_entity_id</th>\n",
+       "      <th>location_id</th>\n",
+       "      <th>year_id</th>\n",
+       "      <th>age_group_id</th>\n",
+       "      <th>sex_id</th>\n",
+       "      <th>cause_id</th>\n",
+       "      <th>mortality</th>\n",
+       "      <th>morbidity</th>\n",
+       "      <th>metric_id</th>\n",
+       "      <th>...</th>\n",
+       "      <th>draw_991</th>\n",
+       "      <th>draw_992</th>\n",
+       "      <th>draw_993</th>\n",
+       "      <th>draw_994</th>\n",
+       "      <th>draw_995</th>\n",
+       "      <th>draw_996</th>\n",
+       "      <th>draw_997</th>\n",
+       "      <th>draw_998</th>\n",
+       "      <th>draw_999</th>\n",
+       "      <th>model_version_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>241</td>\n",
+       "      <td>9083</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>388</td>\n",
+       "      <td>1</td>\n",
+       "      <td>302</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.929152</td>\n",
+       "      <td>0.989923</td>\n",
+       "      <td>1.395594</td>\n",
+       "      <td>1.004964</td>\n",
+       "      <td>1.212101</td>\n",
+       "      <td>1.193500</td>\n",
+       "      <td>1.736488</td>\n",
+       "      <td>1.241752</td>\n",
+       "      <td>1.477957</td>\n",
+       "      <td>754840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>241</td>\n",
+       "      <td>9083</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>388</td>\n",
+       "      <td>1</td>\n",
+       "      <td>302</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.916891</td>\n",
+       "      <td>0.988116</td>\n",
+       "      <td>1.481353</td>\n",
+       "      <td>1.005862</td>\n",
+       "      <td>1.254711</td>\n",
+       "      <td>1.232036</td>\n",
+       "      <td>1.915742</td>\n",
+       "      <td>1.290962</td>\n",
+       "      <td>1.584784</td>\n",
+       "      <td>754840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>241</td>\n",
+       "      <td>9083</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>388</td>\n",
+       "      <td>1</td>\n",
+       "      <td>302</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.913518</td>\n",
+       "      <td>0.987614</td>\n",
+       "      <td>1.506405</td>\n",
+       "      <td>1.006114</td>\n",
+       "      <td>1.266904</td>\n",
+       "      <td>1.243129</td>\n",
+       "      <td>1.970333</td>\n",
+       "      <td>1.305071</td>\n",
+       "      <td>1.616652</td>\n",
+       "      <td>754840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>241</td>\n",
+       "      <td>9083</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>388</td>\n",
+       "      <td>1</td>\n",
+       "      <td>302</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>754840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>241</td>\n",
+       "      <td>9083</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>388</td>\n",
+       "      <td>1</td>\n",
+       "      <td>302</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.437199</td>\n",
+       "      <td>1.556512</td>\n",
+       "      <td>1.238985</td>\n",
+       "      <td>1.586259</td>\n",
+       "      <td>1.355247</td>\n",
+       "      <td>1.371715</td>\n",
+       "      <td>1.274426</td>\n",
+       "      <td>1.330327</td>\n",
+       "      <td>1.203095</td>\n",
+       "      <td>754840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>763</th>\n",
+       "      <td>94</td>\n",
+       "      <td>9023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2</td>\n",
+       "      <td>345</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>754839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>764</th>\n",
+       "      <td>94</td>\n",
+       "      <td>9023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2</td>\n",
+       "      <td>345</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.941712</td>\n",
+       "      <td>1.068806</td>\n",
+       "      <td>2.131647</td>\n",
+       "      <td>1.101521</td>\n",
+       "      <td>1.604302</td>\n",
+       "      <td>1.555359</td>\n",
+       "      <td>3.320187</td>\n",
+       "      <td>1.684416</td>\n",
+       "      <td>2.394071</td>\n",
+       "      <td>754839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>765</th>\n",
+       "      <td>94</td>\n",
+       "      <td>9023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2</td>\n",
+       "      <td>345</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.915275</td>\n",
+       "      <td>1.103042</td>\n",
+       "      <td>3.044607</td>\n",
+       "      <td>1.153137</td>\n",
+       "      <td>2.005505</td>\n",
+       "      <td>1.916338</td>\n",
+       "      <td>5.832991</td>\n",
+       "      <td>2.154464</td>\n",
+       "      <td>3.610802</td>\n",
+       "      <td>754839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>766</th>\n",
+       "      <td>94</td>\n",
+       "      <td>9023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2</td>\n",
+       "      <td>345</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.876307</td>\n",
+       "      <td>1.158414</td>\n",
+       "      <td>5.583273</td>\n",
+       "      <td>1.238296</td>\n",
+       "      <td>2.887873</td>\n",
+       "      <td>2.694726</td>\n",
+       "      <td>16.488628</td>\n",
+       "      <td>3.230967</td>\n",
+       "      <td>7.381484</td>\n",
+       "      <td>754839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>767</th>\n",
+       "      <td>94</td>\n",
+       "      <td>9023</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>34</td>\n",
+       "      <td>2</td>\n",
+       "      <td>345</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>754839</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>768 rows × 1013 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     rei_id  modelable_entity_id  location_id  year_id  age_group_id  sex_id  \\\n",
+       "0       241                 9083            1     2021           388       1   \n",
+       "1       241                 9083            1     2021           388       1   \n",
+       "2       241                 9083            1     2021           388       1   \n",
+       "3       241                 9083            1     2021           388       1   \n",
+       "4       241                 9083            1     2021           388       1   \n",
+       "..      ...                  ...          ...      ...           ...     ...   \n",
+       "763      94                 9023            1     2021            34       2   \n",
+       "764      94                 9023            1     2021            34       2   \n",
+       "765      94                 9023            1     2021            34       2   \n",
+       "766      94                 9023            1     2021            34       2   \n",
+       "767      94                 9023            1     2021            34       2   \n",
+       "\n",
+       "     cause_id  mortality  morbidity  metric_id  ...  draw_991  draw_992  \\\n",
+       "0         302          0          1          3  ...  0.929152  0.989923   \n",
+       "1         302          0          1          3  ...  0.916891  0.988116   \n",
+       "2         302          0          1          3  ...  0.913518  0.987614   \n",
+       "3         302          0          1          3  ...  1.000000  1.000000   \n",
+       "4         302          1          0          3  ...  1.437199  1.556512   \n",
+       "..        ...        ...        ...        ...  ...       ...       ...   \n",
+       "763       345          0          1          3  ...  1.000000  1.000000   \n",
+       "764       345          1          0          3  ...  0.941712  1.068806   \n",
+       "765       345          1          0          3  ...  0.915275  1.103042   \n",
+       "766       345          1          0          3  ...  0.876307  1.158414   \n",
+       "767       345          1          0          3  ...  1.000000  1.000000   \n",
+       "\n",
+       "     draw_993  draw_994  draw_995  draw_996   draw_997  draw_998  draw_999  \\\n",
+       "0    1.395594  1.004964  1.212101  1.193500   1.736488  1.241752  1.477957   \n",
+       "1    1.481353  1.005862  1.254711  1.232036   1.915742  1.290962  1.584784   \n",
+       "2    1.506405  1.006114  1.266904  1.243129   1.970333  1.305071  1.616652   \n",
+       "3    1.000000  1.000000  1.000000  1.000000   1.000000  1.000000  1.000000   \n",
+       "4    1.238985  1.586259  1.355247  1.371715   1.274426  1.330327  1.203095   \n",
+       "..        ...       ...       ...       ...        ...       ...       ...   \n",
+       "763  1.000000  1.000000  1.000000  1.000000   1.000000  1.000000  1.000000   \n",
+       "764  2.131647  1.101521  1.604302  1.555359   3.320187  1.684416  2.394071   \n",
+       "765  3.044607  1.153137  2.005505  1.916338   5.832991  2.154464  3.610802   \n",
+       "766  5.583273  1.238296  2.887873  2.694726  16.488628  3.230967  7.381484   \n",
+       "767  1.000000  1.000000  1.000000  1.000000   1.000000  1.000000  1.000000   \n",
+       "\n",
+       "     model_version_id  \n",
+       "0              754840  \n",
+       "1              754840  \n",
+       "2              754840  \n",
+       "3              754840  \n",
+       "4              754840  \n",
+       "..                ...  \n",
+       "763            754839  \n",
+       "764            754839  \n",
+       "765            754839  \n",
+       "766            754839  \n",
+       "767            754839  \n",
+       "\n",
+       "[768 rows x 1013 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rrs = get_draws(gbd_round_id=7, year_id=2021, gbd_id_type='rei_id', gbd_id=[241,240,94], source='rr', decomp_step='iterative')\n",
+    "rrs"
+   ]
   }
  ],
  "metadata": {
