--- a/Treatments_and_adherence.ipynb
+++ b/Treatments_and_adherence.ipynb
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "fb5f39df-4205-4dbf-9cec-ef6ad5d2178c",
    "metadata": {},
    "outputs": [],
@@ -1919,10 +1919,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "5063df60-b1a8-4ae7-b8bb-89adf04f6196",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/ihme/homes/lutzes/.conda/envs/cvd/lib/python3.8/site-packages/db_queries/legacy/get_outputs_helpers/arguments.py:789: DeprecationWarning: In GBD 2022, the arguments gbd_round_id and decomp_step will be removed. Switch to using release_id exclusively. Every GBD round and decomp step combination has an equivalent release_id: https://hub.ihme.washington.edu/x/vS7NCQ\n",
+      "  release_helpers.validate_decomp_step_and_release_id(\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1954,9 +1962,10 @@
        "      <th>acause</th>\n",
        "      <th>age_group_name</th>\n",
        "      <th>cause_name</th>\n",
-       "      <th>expected</th>\n",
+       "      <th>...</th>\n",
        "      <th>location_name</th>\n",
        "      <th>location_type</th>\n",
+       "      <th>measure</th>\n",
        "      <th>measure_name</th>\n",
        "      <th>metric_name</th>\n",
        "      <th>sex</th>\n",
@@ -1979,9 +1988,10 @@
        "      <td>cvd_stroke_isch</td>\n",
        "      <td>25 to 29</td>\n",
        "      <td>Ischemic stroke</td>\n",
-       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>admin1</td>\n",
+       "      <td>death</td>\n",
        "      <td>Deaths</td>\n",
        "      <td>Rate</td>\n",
        "      <td>Male</td>\n",
@@ -2002,9 +2012,10 @@
        "      <td>cvd_stroke_isch</td>\n",
        "      <td>25 to 29</td>\n",
        "      <td>Ischemic stroke</td>\n",
-       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>admin1</td>\n",
+       "      <td>death</td>\n",
        "      <td>Deaths</td>\n",
        "      <td>Rate</td>\n",
        "      <td>Female</td>\n",
@@ -2025,9 +2036,10 @@
        "      <td>cvd_stroke_isch</td>\n",
        "      <td>30 to 34</td>\n",
        "      <td>Ischemic stroke</td>\n",
-       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>admin1</td>\n",
+       "      <td>death</td>\n",
        "      <td>Deaths</td>\n",
        "      <td>Rate</td>\n",
        "      <td>Male</td>\n",
@@ -2048,9 +2060,10 @@
        "      <td>cvd_stroke_isch</td>\n",
        "      <td>30 to 34</td>\n",
        "      <td>Ischemic stroke</td>\n",
-       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>admin1</td>\n",
+       "      <td>death</td>\n",
        "      <td>Deaths</td>\n",
        "      <td>Rate</td>\n",
        "      <td>Female</td>\n",
@@ -2071,9 +2084,10 @@
        "      <td>cvd_stroke_isch</td>\n",
        "      <td>35 to 39</td>\n",
        "      <td>Ischemic stroke</td>\n",
-       "      <td>False</td>\n",
+       "      <td>...</td>\n",
        "      <td>Alabama</td>\n",
        "      <td>admin1</td>\n",
+       "      <td>death</td>\n",
        "      <td>Deaths</td>\n",
        "      <td>Rate</td>\n",
        "      <td>Male</td>\n",
@@ -2084,6 +2098,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -2094,29 +2109,31 @@
        "3            11       495          523           1          3       2   \n",
        "4            12       495          523           1          3       1   \n",
        "\n",
-       "   year_id           acause age_group_name       cause_name expected  \\\n",
-       "0     2017  cvd_stroke_isch       25 to 29  Ischemic stroke    False   \n",
-       "1     2017  cvd_stroke_isch       25 to 29  Ischemic stroke    False   \n",
-       "2     2017  cvd_stroke_isch       30 to 34  Ischemic stroke    False   \n",
-       "3     2017  cvd_stroke_isch       30 to 34  Ischemic stroke    False   \n",
-       "4     2017  cvd_stroke_isch       35 to 39  Ischemic stroke    False   \n",
+       "   year_id           acause age_group_name       cause_name  ...  \\\n",
+       "0     2017  cvd_stroke_isch       25 to 29  Ischemic stroke  ...   \n",
+       "1     2017  cvd_stroke_isch       25 to 29  Ischemic stroke  ...   \n",
+       "2     2017  cvd_stroke_isch       30 to 34  Ischemic stroke  ...   \n",
+       "3     2017  cvd_stroke_isch       30 to 34  Ischemic stroke  ...   \n",
+       "4     2017  cvd_stroke_isch       35 to 39  Ischemic stroke  ...   \n",
        "\n",
-       "  location_name location_type measure_name metric_name     sex       val  \\\n",
-       "0       Alabama        admin1       Deaths        Rate    Male  0.000003   \n",
-       "1       Alabama        admin1       Deaths        Rate  Female  0.000003   \n",
-       "2       Alabama        admin1       Deaths        Rate    Male  0.000006   \n",
-       "3       Alabama        admin1       Deaths        Rate  Female  0.000006   \n",
-       "4       Alabama        admin1       Deaths        Rate    Male  0.000009   \n",
+       "  location_name location_type measure measure_name metric_name     sex  \\\n",
+       "0       Alabama        admin1   death       Deaths        Rate    Male   \n",
+       "1       Alabama        admin1   death       Deaths        Rate  Female   \n",
+       "2       Alabama        admin1   death       Deaths        Rate    Male   \n",
+       "3       Alabama        admin1   death       Deaths        Rate  Female   \n",
+       "4       Alabama        admin1   death       Deaths        Rate    Male   \n",
        "\n",
-       "      upper     lower       age  \n",
-       "0  0.000004  0.000002  25_to_29  \n",
-       "1  0.000004  0.000002  25_to_29  \n",
-       "2  0.000009  0.000003  30_to_34  \n",
-       "3  0.000009  0.000004  30_to_34  \n",
-       "4  0.000014  0.000005  35_to_39  "
+       "        val     upper     lower       age  \n",
+       "0  0.000003  0.000004  0.000002  25_to_29  \n",
+       "1  0.000003  0.000004  0.000002  25_to_29  \n",
+       "2  0.000006  0.000009  0.000003  30_to_34  \n",
+       "3  0.000006  0.000009  0.000004  30_to_34  \n",
+       "4  0.000009  0.000014  0.000005  35_to_39  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2529,7 +2546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
