--- a/therapeutic_inertia_nanosim.ipynb
+++ b/therapeutic_inertia_nanosim.ipynb
@@ -60,10 +60,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "inertia = 0.20 ## Means 25% of people DO GET treated and/or tirated on any time step\n",
+    "inertia = 0.20 ## Means 20% of people DO GET treated and/or tirated on any time step\n",
     "medication_rate = 0.597492 # Approx 60% of people who should be on meds are on meds \n",
     "sim_prop_rate = 0.5 #Means 50% of the propensity is due to the sim and 50% is random \n",
     "churn_rate = 0.05 #Adding a \"churn\" which is meant to represent people dying + new people needing SBP meds (aging in basically) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2afbc53d",
+   "metadata": {},
+   "source": [
+    "Notes on churn rate: \n",
+    "\n",
+    "We need to include a churn in the model, otherwise with any random component the medication rate will only stabilize at 100%, which we don't want. However, the churn parameter is difficult to conceptualize and quantify. Therefore we completed some sensitivity testing and found that a churn rate between 1-10% gave reasonable results in the nanosim. We think that churn in the full model will fall in this range. "
    ]
   },
   {
@@ -247,6 +257,8 @@
     "                                np.where(sims['adjusted_sbp'] < 130, sims['meds'], \n",
     "                                np.where(sims['total_propensity'] < inertia, sims['meds'] + 1, sims['meds'])))\n",
     "\n",
+    "        ##Lower SBP levels as a result of medication. \n",
+    "        ##Each additional SBP med level is assumed to decrease SBP by 5 points. This is an oversimplifcation but works on average. \n",
     "        sims['adjusted_sbp'] = sims['original_sbp'] - (5*sims['meds'])\n",
     "        \n",
     "        #sims['meds'] = np.where(sims['meds'] == 1, 1, np.where(sims['total_propensity'] < inertia, 1, 0))\n",
