--- a/figure_creation/map_figures_8.16.23.ipynb
+++ b/figure_creation/map_figures_8.16.23.ipynb
@@ -49,17 +49,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "binned_ldl_exposure_time.csv     risk_exposure_time.csv\n",
-      "binned_sbp_exposure_time.csv     sbp_medication_person_time.csv\n",
-      "deaths.csv                       state_person_time.csv\n",
-      "healthcare_visits.csv            transition_count.csv\n",
-      "intervention_person_time.csv     ylds.csv\n",
-      "ldlc_medication_person_time.csv  ylls.csv\n"
+      "binned_ldl_exposure_time.csv  state_person_time.csv  ylls.csv\n",
+      "binned_sbp_exposure_time.csv  transition_count.csv\n",
+      "deaths.csv                    ylds.csv\n"
      ]
     }
    ],
    "source": [
-    "ls /mnt/team/simulation_science/pub/models/vivarium_nih_us_cvd/results/final-runs-test/nih_us_cvd/2023_12_18_15_45_33/count_data"
+    "ls /mnt/team/simulation_science/pub/models/vivarium_nih_us_cvd/results/final_runs/nih_us_cvd/2023_12_28_13_42_46/count_data"
    ]
   },
   {
@@ -69,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim_results_dir = '/mnt/team/simulation_science/pub/models/vivarium_nih_us_cvd/results/final-runs-test/nih_us_cvd/2023_12_18_15_45_33/count_data/'"
+    "sim_results_dir = '/mnt/team/simulation_science/pub/models/vivarium_nih_us_cvd/results/final_runs/nih_us_cvd/2023_12_28_13_42_46/count_data/'"
    ]
   },
   {
